# uae-seeker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: frontend-job-monitor.yml
config/: sources.example.yaml
job_monitor/: classifier.py  cli.py  collector.py  config.py  dedupe.py  digest.py  models.py  storage.py
job_monitor/sources/: __init__.py
tests/: test_classifier.py  test_dedupe.py
